# agent_tooling

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_file.py
crewai_tools/: __init__.py
docs/: AGENTS.md  user_scenarios.md
docs/semantic_fabric/: AGENTS.md  API_SPECIFICATION.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROJECT.md  README.md
docs/semantic_fabric/old/: epics.md  high_level_architecture.md  v2_v3_features.md  workflow_mid-level_arch.md
mcp_server/: __init__.py  app.py
mcp_server/api/: __init__.py  comby.py  routes.py
mcp_server/fetcher/: tasks.py
mcp_server/models/: __init__.py  exceptions.py
mcp_server/rules_engine/: loader.py  rules.json
mcp_server/services/: __init__.py  comby.py  semgrep.py
mcp_server/tests/integration/: test_api.py
mcp_server/tests/unit/: test_comby_service.py  test_semgrep_service.py
mcp_server/utils/: __init__.py
semantic_fabric/: README.md
semantic_fabric/docs/: ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  PROJECT.md
semantic_fabric/docs/old/: semantic_tools_mcp.md  sprintplan.md
semantic_fabric/mcp_server/: main.py
semantic_fabric/mcp_server/api/: semgrep.py
semantic_fabric/mcp_server/models/: __init__.py  comby.py  exceptions.py  semgrep.py
semantic_fabric/mcp_server/services/: tree_sitter.py
semantic_fabric/mcp_server/tests/unit/: test_unicode_ast.py
semantic_fabric/mcp_server/utils/: __init__.py  unicode_ast.py
tests/: conftest.py  test_api.py  test_fetcher.py  test_rules_engine.py
tools/doxygen_embedder/: README.md  main.py  tool-spec.json
tools/doxygen_embedder/tests/: test_main.py
