[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for structural code search and replace operations using Comby"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Semantic Fabric Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed"
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.6",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0.1"
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "YTT", # flake8-2020
    "FBT", # flake8-boolean-trap
    "Q",  # flake8-quotes
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["mcp_server"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=mcp_server --cov-report=term-missing"

[tool.coverage.run]
source = ["mcp_server"]
omit = [
    "mcp_server/__init__.py",
]

[tool.coverage.report]
show_missing = true

[project.urls]
Homepage = "https://github.com/your-org/mcp-server"
Documentation = "https://github.com/your-org/mcp-server#readme"
Changelog = "https://github.com/your-org/mcp-server/blob/main/CHANGELOG.md"
Issues = "https://github.com/your-org/mcp-server/issues"
Source = "https://github.com/your-org/mcp-server"
